// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-test-renderer <BasicComponent /> 1`] = `
<div
  className="react-tabs"
  data-tabs={true}
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <ul
    className="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="react-tabs-1"
      aria-disabled="false"
      aria-selected="true"
      className="react-tabs__tab react-tabs__tab--selected"
      id="react-tabs-0"
      role="tab"
      tabIndex="0"
    >
      Title 1
    </li>
    <li
      aria-controls="react-tabs-3"
      aria-disabled="false"
      aria-selected="false"
      className="react-tabs__tab"
      id="react-tabs-2"
      role="tab"
      tabIndex={null}
    >
      Title 2
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-0"
    className="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-1"
    role="tabpanel"
  >
    <h2>
      Any content 1
    </h2>
  </div>
  <div
    aria-labelledby="react-tabs-2"
    className="react-tabs__tab-panel"
    id="react-tabs-3"
    role="tabpanel"
  />
</div>
`;

exports[`react-test-renderer <ControlledComponent /> 1`] = `
<div
  className="react-tabs"
  data-tabs={true}
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <ul
    className="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="react-tabs-5"
      aria-disabled="false"
      aria-selected="true"
      className="react-tabs__tab react-tabs__tab--selected"
      id="react-tabs-4"
      role="tab"
      tabIndex="0"
    >
      Title 1
    </li>
    <li
      aria-controls="react-tabs-7"
      aria-disabled="false"
      aria-selected="false"
      className="react-tabs__tab"
      id="react-tabs-6"
      role="tab"
      tabIndex={null}
    >
      Title 2
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-4"
    className="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-5"
    role="tabpanel"
  />
  <div
    aria-labelledby="react-tabs-6"
    className="react-tabs__tab-panel"
    id="react-tabs-7"
    role="tabpanel"
  />
</div>
`;

exports[`react-test-renderer <CustomTabComponent /> 1`] = `
<div
  className="react-tabs"
  data-tabs={true}
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <ul
    className="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls={null}
      aria-disabled="false"
      aria-selected="false"
      className="react-tabs__tab"
      id={null}
      role="tab"
      tabIndex={null}
    >
      <h1>
        Custom Tab 1
      </h1>
    </li>
    <li
      aria-controls={null}
      aria-disabled="false"
      aria-selected="false"
      className="react-tabs__tab"
      id={null}
      role="tab"
      tabIndex={null}
    >
      <h1>
        Custom Tab 2
      </h1>
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-8"
    className="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-9"
    role="tabpanel"
  >
    Panel 1
  </div>
  <div
    aria-labelledby="react-tabs-10"
    className="react-tabs__tab-panel"
    id="react-tabs-11"
    role="tabpanel"
  />
</div>
`;
